# TANGELO

./: .env.example  CONFIG.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  setup.py  setup_env.sh.example
.github/workflows/: ci.yml
astro_utils/: catalogue_operations.py  fitting.py  ifs.py  image_processing.py  plotting.py  spectroscopy.py
tangelo/: __init__.py  catalogue_operations.py  constants.py  fitting.py  image_processing.py  io.py  lya_fitting.py  lya_profile.py  models.py  plotting.py  quality_control.py  spectroscopy.py  statistics.py
tangiers/: __init__.py  fitting.py  io.py  quality_control.py  spectroscopy.py
tests/: test_catalogue_operations.py  test_fitting.py  test_image_processing.py  test_io.py  test_lya_fitting.py
